--- a/sobremi.html
+++ b/sobremi.html
@@ -45,7 +45,7 @@
         <article class="simpleText">
             Mi nombre es Sebastian Serna Valencia. Nací en un pintoresco pueblo del Quindío llamado Quimbaya, aunque
             actualmente resido
-            en la capital del departamento, Armenia. Tengo 32 años y desde siempre he sido un apasionado por la
+            en la capital del departamento, Armenia - Quindío. Tengo 32 años y desde siempre he sido un apasionado por la
             tecnología, lo que me
             ha llevado a incursionar en esta área de manera profunda y constante.
         </article>
