language and spelling correction.

--- a/sobremi.html
+++ b/sobremi.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -82,9 +82,7 @@
                 <li>Java</li>
                 <li>SQL</li>
             </ul>
-            También tengo experiencia en el manejo de bases de datos relacionales utilizando SQL. Gracias a estas
-            habilidades, me resulta sencillo
-            trabajar con tecnologías web como html, CSS y JavaScript.
+            Gracias a estas habilidades, me es sencillo manejar tecnologías web como HTML, CSS y JavaScript.
         </article>
     </main>
 
