--- a/index.html
+++ b/index.html
@@ -4,23 +4,29 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portafolio Profesional</title>
-        <link href="https://fonts.googleapis.com/css2?family=Freeman&display=swap" rel="stylesheet">
+        <title>Portafolio Profesional</title> <!-- Titulo de la pagina -->
+        <link
+            href="https://fonts.googleapis.com/css2?family=Freeman&display=swap"
+            rel="stylesheet">
         <link rel="preload" href="css/style.css" as="style">
         <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
         <header>
-            <h1 class="titles">¡Bienvenido a mi Página Profesional!</h1>
+            <h1 class="titles">¡Bienvenido a mi Página Profesional!</h1> <!-- Titulo dentro de la pagina -->
         </header>
 
-        <section class="main-navigation">
-            <nav class="nav-links container-links"
-                aria-label="Navegación Principal">
-                <a href="index.html" id="homeicon" class="cta-button">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-home" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+        <section class="main-navigation"> <!-- Seccion contenedora de la barra de navegacion -->
+            <nav class="nav-links container-links" 
+                aria-label="Navegación Principal"> <!-- Barra de navegacion -->
+                <a href="index.html" id="homeicon" class="cta-button"> <!-- Icono de Home como enlace -->
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-home" width="24"
+                        height="24" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="#000000" fill="none" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
                         <path d="M5 12l-2 0l9 -9l9 9l-2 0" />
                         <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" />
                         <path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" />
@@ -34,10 +40,12 @@
             </nav>
         </section>
 
-        <main>
+        <main> <!-- Contenido Principal de la pagina -->
             <section class="main-intro" aria-labelledby="Titulo-intro">
-                <h2 id="Titulo-intro" class="subtitles">Un poco de mi...</h2>
-                <p class="simpleText">Mi nombre es Sebastián Serna Valencia, soy un apasionado de la tecnología.
+                <h2 id="Titulo-intro" class="subtitles">Un poco de mi...</h2> <!-- Subtitulo -->
+                <p class="simpleText"> <!-- Parrafo de introduccion -->
+                    Mi nombre es Sebastián Serna Valencia, soy
+                    un apasionado de la tecnología.
                     Aquí podrás descubrir más sobre mi
                     trayectoria,
                     proyectos y habilidades. Explora mi sitio para conocer cómo
@@ -45,13 +53,14 @@
                     objetivos.</p>
             </section>
 
-            <section class="avatar">
-                <img src="images/avatar.png" alt="avatarSebastian" class="mi-imagen">
+            <section class="avatar"> <!-- Avatar -->
+                <img src="images/avatar.png" alt="avatarSebastian"
+                    class="mi-imagen">
             </section>
         </main>
 
-        <footer aria-label="Redes Sociales">
-            <a href="https://wa.me/qr/L6U7TSVVG3EJH1">
+        <footer aria-label="Redes Sociales"> <!-- Pie de pagina -->
+            <a href="https://wa.me/qr/L6U7TSVVG3EJH1"> <!-- Iconos SVG como enlace -->
                 <svg xmlns="http://www.w3.org/2000/svg"
                     class="icon icon-tabler icon-tabler-brand-whatsapp"
                     width="44"
