--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
         <main class="blogContainer"> <!-- contenido principal de la pagina -->
             <article class="articleBlog"> <!-- publicacion de blog tipo articulo -->
                 <h2 class="subtitles">Lorem ipsum dolor sit amet.</h2>
-                <img src="/images/b4.png" alt="Imagen de microfono"> <!-- Imagen relacionada a un apublicacion de blog -->
+                <img src="../images/b4.png" alt="Imagen de microfono"> <!-- Imagen relacionada a un apublicacion de blog -->
                 <p class="simpleText">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Vestibulum vehicula, quam sit amet convallis
@@ -74,7 +74,7 @@
             <article class="articleBlog">
                 <h2 class="subtitles">Lorem ipsum dolor sit amet, consectetur
                     adipiscing elit. Nunc</h2>
-                <img src="/images/b3.png" alt="Imagen de laptop">
+                <img src="../images/b3.png" alt="Imagen de laptop">
                 <p class="simpleText">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Vestibulum vehicula, quam sit amet convallis
@@ -102,7 +102,7 @@
             <article class="articleBlog">
                 <h2 class="subtitles">Onsectetur adipiscing elit. Vestibulum
                     vehicula</h2>
-                <img src="/images/b2.png" alt="Imagen de aeropuerto">
+                <img src="../images/b2.png" alt="Imagen de aeropuerto">
                 <p class="simpleText">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Vestibulum vehicula, quam sit amet convallis
@@ -130,7 +130,7 @@
             <article class="articleBlog">
                 <h2 class="subtitles">Onsectetur adipiscing elit. Vestibulum
                     vehicula</h2>
-                <img src="/images/b1.png" alt="Imagen de radiografia">
+                <img src="../images/b1.png" alt="Imagen de radiografia">
                 <p class="simpleText">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Vestibulum vehicula, quam sit amet convallis
